Complete overhaul of home page which now has picks and bet functionality split up by tabs.

--- a/bets/static/bets/css/bets.css
+++ b/bets/static/bets/css/bets.css
@@ -8,8 +8,8 @@
 }
 
 .bet-box-unselected {
-    background-color: #4d4b4b;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: black;
 }
 
 .bet-box-selected {
