--- a/home/static/home/dashboard.css
+++ b/home/static/home/dashboard.css
@@ -1,10 +1,9 @@
 .no-padding {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .navbar-dashboard {
-    margin-top: 60px;
     z-index: 1;
 }
 
