--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Onside Pick</title>
     <!-- Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -8,15 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">{% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #292727">
-    <a class="navbar-brand" href="#">
-        <img class="rounded img-fluid" src="{% static 'media/logoSmallWhite.png' %}" width="50" height="auto">
+
+<nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #292727">
+    <a class="navbar-brand" href="/home/">
+        <img class="rounded img-fluid" src="{% static 'media/logoTitleWhite.png' %}" width="225" height="auto">
     </a>
     <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
-        <ul class="navbar-nav mr-auto">
+        <!--<ul class="navbar-nav mr-auto">
             <li class="nav-item main-menu mr-1">
                 {% if page == 'dashboard' %}
                 <a class="nav-link active-menu-item" href="/home/">Dashboard</a> {% else %}
@@ -32,8 +33,8 @@
                 <a class="nav-link active-menu-item" href="/bets/">Bets</a> {% else %}
                 <a class="nav-link" href="/bets/">Bets</a> {% endif %}
             </li>
-        </ul>
-        <ul class="navbar-nav">
+        </ul>-->
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown mr-2">
                 {% if activeLeague %}
                 <a class="dropdown-toggle nav-link nav-league" data-toggle="dropdown" aria-expanded="false" href="#">
@@ -76,5 +77,4 @@
 
 <!-- Bootstrap -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
 {% block page_content %} {% endblock %}
