--- a/static_in_env/css/global.css
+++ b/static_in_env/css/global.css
@@ -71,12 +71,14 @@
 
 /*Font*/
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Lato', sans-serif;
-    padding-top: 60px;
-    /*background-color: #edeef0;*/
     background-color: white;
-    max-width: 100%;
+    overflow-x: hidden;
 }
 
 
