--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -16,9 +16,9 @@
     </a>
 </nav>
 
-<body>
-    <div class="container">
-        <h2>Create a new account</h2>
+<body class="mt-5">
+    <div class="container mt-3">
+        <h2>Create new account</h2>
         {% if error %}
         <div class="alert alert-danger" role="alert">
             <strong>Error: </strong> {{ error }}
