--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -152,9 +152,7 @@
                 <div class="tab-pane fade" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
                     {% if gameData %}
                     <div class="dropdown">
-                        <button class="m-2 btn btn-blue dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <strong>Week {{ week }}</strong>
-                    </button>
+                        <button class="m-2 btn btn-grey dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Week {{ week }}</button>
                         <div class="dropdown-menu">
                             {% for week in weeks %}
                             <a class="dropdown-item" href="/home/{{ week }}/">Week {{ week }}</a> {% endfor %}
