--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -18,9 +18,9 @@
 <div class="container-fluid p-0">
     <div class="d-flex mt-2 mr-3 ml-3">
         <h1 class="flex-grow-1 text-center"><strong>{{ activeLeague }}</strong></h1>
-        <a class="mt-3" href="/league/admin/{{ activeLeague }}/">
+        <!--<a class="mt-3" href="/league/admin/{{ activeLeague }}/">
             <img class="rounded img-fluid" src="{% static 'media/settings.jpg' %}" width="30" height="auto">
-        </a>
+        </a>-->
     </div>
     <div class="row m-0">
         <div class="col p-0">
