Updated bets wording

--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -38,7 +38,7 @@
                 <h6 class="mb-2">If you were to bet points on the Rams spread, then you are saying that the Rams will win by 7 points or more. If they do, you will win the bet. If they lose the game or win by 6 points or less, you lose the bet.</h6>
                 <hr>
                 <h6 class="mb-2">The Seahawks have a spread of <strong>+7</strong>, which means that they are the <strong>underdog</strong> in this game and are projected to lose by 7 points or more.</h6>
-                <h6 class="mb-2">If you were to bet points on the Seahawks spread, then you are saying that the Seahawks will lose by 7 points or more. If they do, you will win the bet. If they win the game or lose by 6 points or less, you lose the bet.</h6>
+                <h6 class="mb-2">If you were to bet points on the Seahawks spread, then you are saying that the Seahawks will either win or lose by 7 points or fewer. If they do, you will win the bet. If they lose by more than 7 points, you lose the bet.</h6>
                 <hr>
                 <h6>The Payout</h6>
                 <h6>All payouts are 90% of your bet. So a bet of 100 points would generate a reward of 90 additional points. Likewise a bet of 20 points would generate a reward of 18 points.</h6>
